--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2664,7 +2664,7 @@ input[type=color] {
   width: 50px;
   height: 50px;
   border-radius: 100%;
-  background: var(--tp-common-black);
+  background: #E6411C;
   animation: preloader 1.3s linear infinite;
   -webkit-animation: preloader 1.3s linear infinite;
 }
